--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@
 
 # Project key from sonarcloud dashboard for Github Action,
 # otherwise pick a project key you like
-sonar.projectKey=golang-sonar
+#sonar.projectKey=golang-sonar
 
 sonar.projectName=golang_sonar
 sonar.projectVersion=1.0.0
